Fix: loop posts mis-alignment

--- a/dev-life-ghost-theme/src/assets/css/loop.scss
+++ b/dev-life-ghost-theme/src/assets/css/loop.scss
@@ -5,7 +5,6 @@
 .posts-wrapper {
   display: flex;
   flex-wrap: wrap;
-  padding: 4rem .5rem;
   box-sizing: border-box;
 }
 
@@ -15,6 +14,7 @@
   margin: 0 0 2rem 2rem;
   max-height: 386px;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .post-card-title {
@@ -40,39 +40,21 @@
   margin: .5rem 0;
 }
 
-@media(max-width: 1099px) {
-  .post-card {
-    width: 35rem;
-    margin: 0 0 2rem 2rem;
-    max-height: 100%;
-  }
-
-  .post-card:nth-child(odd) {
-    margin-left: 0;
-  }
-}
-
-
 @media(max-width: 768px) {
   .posts-wrapper {
     flex-direction: column;
   }
 
   .post-card {
-    width: 100%;
     margin: 0 0 2rem 0;
     max-height: 100%;
   }
 }
 
-@media(min-width: 1100px) {
+@media(min-width: 927px) {
   .post-card {
     width: 35rem;
     margin: 0 0 2rem 2rem;
     max-height: 100%;
-  }
-
-  .post-card:nth-child(3n+1) {
-    margin-left: 0;
   }
 }
